--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ body {
     background-color: #083b4c;
 }
 
+h1 {
+    text-align: center;
+    color:white;
+    font-size: 35px;
+}
+
 #container {
     display: flex;
     flex-wrap: wrap;
